compiler/runtime/tests/snapshots/manifest_validation__manifest_unknown_effect_stage.snap
---
source: tests/manifest_validation.rs
expression: snapshot_diag(diag)
---
audit:
  config.key_path:
    - dsl
    - demo
    - expect_effects_stage
  config.path: /virtual/workspace/reml.toml
  config.source: manifest
code: config.invalid_stage
domain: config
extensions:
  config:
    key_path:
      - dsl
      - demo
      - expect_effects_stage
    path: /virtual/workspace/reml.toml
    source: manifest
message: "`dsl.demo.expect_effects_stage` に未対応の Stage `gamma` が指定されました"
notes: []
severity: error
